Changed background, title text.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<style type="text/css">
 		body {
   		margin-top: 1.0em;
-  		background-color: #004F39;
+  		background-color: #FFFFFF;
 		  font-family: "Helvetica,Arial,FreeSans";
   		color: #ffffff;
     }
@@ -18,12 +18,12 @@
       margin: 0 auto;
       width: 700px;
     }
-		h1 { font-size: 3.8em; color: #ffb0c6; margin-bottom: 3px; }
+		h1 { font-size: 3.8em; color: #000000; margin-bottom: 3px; }
 		h1 .small { font-size: 0.4em; }
 		h1 a { text-decoration: none }
-		h2 { font-size: 1.5em; color: #ffb0c6; }
-    h3 { text-align: center; color: #ffb0c6; }
-    a { color: #ffb0c6; }
+		h2 { font-size: 1.5em; color: #000000; }
+    h3 { text-align: center; color: #000000; }
+    a { color: #000000; }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
 		pre { background: #000; color: #fff; padding: 15px;}
@@ -45,7 +45,7 @@
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
 
-    <h1><a href="http://github.com/msu-cse450-ss2010/project">msu-cse450-ss2010-project</a>
+    <h1><a href="http://github.com/msu-cse450-ss2010/project">Michigan State University CSE450 Spring 2011</a>
       <span class="small">by <a href="http://github.com/msu-cse450-ss2010">msu-cse450-ss2010</a></span></h1>
 
     <div class="description">
@@ -55,9 +55,12 @@
     <p>See the [README](https://github.com/msu-cse450-ss2010/project/blob/master/README.md)</p><h2>License</h2>
 <p>[CC-BY-NC-SA 3.0](http://creativecommons.org/licenses/by-nc-sa/3.0/)</p>
 <h2>Authors</h2>
-<p>Zach Riggle (zach@riggle.me)<br/>Kole Reece (reecekol@msu.edu)<br/>Brandon Overall (oberallb@msu.edu)</p>
+<p>Zach Riggle (zach@riggle.me)
+<br/>Kole Reece (reecekol@msu.edu)
+<br/>Brandon Overall (oberallb@msu.edu)</p>
 <h2>Contact</h2>
-<p> (riggleza@msu.edu)<br/>      </p>
+<p> (riggleza@msu.edu)
+<br/>      </p>
 
 
     <h2>Download</h2>
