--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       Michigan State University's CSE 450 Coursework for Spring 2011
     </div>
 
-    <p>See the [README](https://github.com/msu-cse450-ss2010/project/blob/master/README.md)</p><h2>License</h2>
-<p>[CC-BY-NC-SA 3.0](http://creativecommons.org/licenses/by-nc-sa/3.0/)</p>
+    <p>See the <a href="https://github.com/msu-cse450-ss2010/project/#readme">README</a> for usage instructions</p><h2>License</h2>
+<p><a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">CC-BY-NC-SA 3.0</a></p>
 <h2>Authors</h2>
 <p>Zach Riggle (zach@riggle.me)
 <br/>Kole Reece (reecekol@msu.edu)
